--- a/source/index.html
+++ b/source/index.html
@@ -120,7 +120,7 @@
             <h3>Layered сhoker</h3>
             <p>&dollar; 115</p>
           </li>
-          <li class="slider__item">
+          <li class="slider__item slider__item--no-tablet">
             <picture>
               <source type="image/webp"
                 srcset="./img/dainty-gold-necklace-desktop.webp, ./img/dainty-gold-necklace-desktop-2x.webp 2x">
@@ -131,7 +131,7 @@
             <h3>Gold chain</h3>
             <p>&dollar; 215</p>
           </li>
-          <li class="slider__item">
+          <li class="slider__item slider__item--no-tablet">
             <picture>
               <source type="image/webp"
                 srcset="./img/galaxy-earrings-desktop.webp, ./img/galaxy-earrings-desktop-2x.webp 2x">
