Свёрстана страница каталога на десктопе

--- a/source/index.html
+++ b/source/index.html
@@ -88,7 +88,11 @@
 
       <section class="slider container">
         <h2>New In</h2>
-        <a href="#">Shop Now</a>
+        <div class="slider__buttons">
+          <button class="slider__button slider__button--previous button" type="button" aria-label="Previous"></button>
+          <button class="slider__button slider__button--next button" type="button" aria-label="Next"></button>
+        </div>
+        <a href="./catalog.html">Shop Now</a>
         <ul class="slider__list list">
           <li class="slider__item">
             <picture>
@@ -143,6 +147,12 @@
             <p>&dollar; 95</p>
           </li>
         </ul>
+        <div class="slider__controls">
+          <button class="slider-control button button-current" type="button" aria-label="First slide">1</button>
+          <button class="slider-control button" type="button" aria-label="Second slide">2</button>
+          <button class="slider-control button" type="button" aria-label="Third slide">3</button>
+          <button class="slider-control button" type="button" aria-label="Fourth slide">4</button>
+        </div>
       </section>
 
       <section class="blog container">
@@ -264,8 +274,8 @@
                   srcset="./img/inst-tablet-15.webp, ./img/inst-tablet-15@2x.webp 2x">
                 <source type="image/webp" srcset="./img/inst-desktop-15.webp, ./img/inst-desktop-15@2x.webp 2x">
                 <!-- 1x: 230px; 2x: 266px -->
-                <img width="230" height="230" src="./img/inst-desktop-15.jpg"
-                  srcset="./img/inst-desktop-15@2x.jpg 2x" alt="Instagram photo">
+                <img width="230" height="230" src="./img/inst-desktop-15.jpg" srcset="./img/inst-desktop-15@2x.jpg 2x"
+                  alt="Instagram photo">
               </picture>
             </a>
           </li>
@@ -278,8 +288,8 @@
                   srcset="./img/inst-tablet-10.webp, ./img/inst-tablet-10@2x.webp 2x">
                 <source type="image/webp" srcset="./img/inst-desktop-10.webp, ./img/inst-desktop-10@2x.webp 2x">
                 <!-- 1x: 399px; 2x: 462px -->
-                <img width="399" height="412" src="./img/inst-desktop-10.jpg"
-                  srcset="./img/inst-desktop-10@2x.jpg 2x" alt="Instagram photo">
+                <img width="399" height="412" src="./img/inst-desktop-10.jpg" srcset="./img/inst-desktop-10@2x.jpg 2x"
+                  alt="Instagram photo">
               </picture>
             </a>
           </li>
@@ -290,8 +300,8 @@
                   srcset="./img/inst-tablet-11.webp, ./img/inst-tablet-11@2x.webp 2x">
                 <source type="image/webp" srcset="./img/inst-desktop-11.webp, ./img/inst-desktop-11@2x.webp 2x">
                 <!-- 1x: 230px; 2x: 266px -->
-                <img width="230" height="230" src="./img/inst-desktop-11.jpg"
-                  srcset="./img/inst-desktop-11@2x.jpg 2x" alt="Instagram photo">
+                <img width="230" height="230" src="./img/inst-desktop-11.jpg" srcset="./img/inst-desktop-11@2x.jpg 2x"
+                  alt="Instagram photo">
               </picture>
             </a>
           </li>
@@ -302,8 +312,8 @@
                   srcset="./img/inst-tablet-13.webp, ./img/inst-tablet-13@2x.webp 2x">
                 <source type="image/webp" srcset="./img/inst-desktop-13.webp, ./img/inst-desktop-13@2x.webp 2x">
                 <!-- 1x: 230px; 2x: 266px -->
-                <img width="230" height="230" src="./img/inst-desktop-13.jpg"
-                  srcset="./img/inst-desktop-13@2x.jpg 2x" alt="Instagram photo">
+                <img width="230" height="230" src="./img/inst-desktop-13.jpg" srcset="./img/inst-desktop-13@2x.jpg 2x"
+                  alt="Instagram photo">
               </picture>
             </a>
           </li>
@@ -316,8 +326,8 @@
                   srcset="./img/inst-tablet-9.webp, ./img/inst-tablet-9@2x.webp 2x">
                 <source type="image/webp" srcset="./img/inst-desktop-9.webp, ./img/inst-desktop-9@2x.webp 2x">
                 <!-- 1x: 230px; 2x: 266px -->
-                <img width="230" height="150" src="./img/inst-desktop-9.jpg"
-                  srcset="./img/inst-desktop-9@2x.jpg 2x" alt="Instagram photo">
+                <img width="230" height="150" src="./img/inst-desktop-9.jpg" srcset="./img/inst-desktop-9@2x.jpg 2x"
+                  alt="Instagram photo">
               </picture>
             </a>
           </li>
@@ -330,8 +340,8 @@
                   srcset="./img/inst-tablet-12.webp, ./img/inst-tablet-12@2x.webp 2x">
                 <source type="image/webp" srcset="./img/inst-desktop-12.webp, ./img/inst-desktop-12@2x.webp 2x">
                 <!-- 1x: 230px; 2x: 266px -->
-                <img width="230" height="150" src="./img/inst-desktop-12.jpg"
-                  srcset="./img/inst-desktop-12@2x.jpg 2x" alt="Instagram photo">
+                <img width="230" height="150" src="./img/inst-desktop-12.jpg" srcset="./img/inst-desktop-12@2x.jpg 2x"
+                  alt="Instagram photo">
               </picture>
             </a>
           </li>
@@ -344,8 +354,8 @@
                   srcset="./img/inst-tablet-14.webp, ./img/inst-tablet-14@2x.webp 2x">
                 <source type="image/webp" srcset="./img/inst-desktop-14.webp, ./img/inst-desktop-14@2x.webp 2x">
                 <!-- 1x: 230px; 2x: 266px -->
-                <img width="230" height="150" src="./img/inst-desktop-14.jpg"
-                  srcset="./img/inst-desktop-14@2x.jpg 2x" alt="Instagram photo">
+                <img width="230" height="150" src="./img/inst-desktop-14.jpg" srcset="./img/inst-desktop-14@2x.jpg 2x"
+                  alt="Instagram photo">
               </picture>
             </a>
           </li>
