Поправила выпадающее меню

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,7 +76,7 @@
       </nav>
     </header>
 
-    <main class="page__catalog">
+    <main class="page__main">
       <section class="intro">
         <div class="intro__container container">
           <div class="intro__wrapper">
