--- a/source/index.html
+++ b/source/index.html
@@ -489,9 +489,9 @@
         </div>
       </div>
     </form>
-  </section>
+  </section> -->
 
-  <script src="./js/vendor.js"></script> -->
+  <script src="./js/vendor.js"></script>
   <script src="./js/main.js"></script>
 
 </body>
