Создала html для карточки товара

--- a/source/card.html
+++ b/source/card.html
@@ -77,17 +77,8 @@
     </header>
 
     <main class="page__main">
-      <section class="info">
-        <div class="info__container container">
-          <div class="info__wrapper">
-            <h1>Perfection</h1>
-            <p>made to be yours</p>
-          </div>
-        </div>
-      </section>
-
       <section class="slider container">
-        <h2>New In</h2>
+        <h2>You May Also Like</h2>
         <div class="slider__buttons">
           <button class="slider__button slider__button--previous button" type="button" aria-label="Previous"></button>
           <button class="slider__button slider__button--next button" type="button" aria-label="Next"></button>
