--- a/source/modal-form.html
+++ b/source/modal-form.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Производство и монтаж, поставка комплектующих, блоков и модулей">
-  <title>HTML Academy: Smart Device</title>
-  <link href="css/style.min.css" type="text/css" rel="stylesheet">
-  <link rel="preload" href="./fonts/ptmono-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="./fonts/robotocondensed-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="./fonts/robotocondensed-bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Интернет-магазин украшений">
+    <title>HTML Academy: Jewellery</title>
+    <link href="css/style.min.css" type="text/css" rel="stylesheet">
+    <link rel="preload" href="./fonts/cormorantgaramond-bold-webfont.woff2" as="font" type="font/woff2"
+      crossorigin="anonymous">
+    <link rel="preload" href="./fonts/cormorantgaramond-italic-webfont.woff2" as="font" type="font/woff2"
+      crossorigin="anonymous">
+    <link rel="preload" href="./fonts/cormorantgaramond-mediumitalic-webfont.woff2" as="font" type="font/woff2"
+      crossorigin="anonymous">
+    <link rel="preload" href="./fonts/cormorantgaramond-semibold-webfont.woff2" as="font" type="font/woff2"
+      crossorigin="anonymous">
+    <link rel="preload" href="./fonts/poppins-bold-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/poppins-medium-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/poppins-regular-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  </head>
 
 <body class="page">
 
