--- a/source/index.html
+++ b/source/index.html
@@ -461,37 +461,36 @@
   </footer>
 
   <!-- Модальное окно Login-->
-  <!-- <section class="modal visually-hidden">
-    <div class="modal__overlay"></div>
-    <form class="modal__form" action="https://echo.htmlacademy.ru/" method="POST">
-      <div class="modal__container">
-        <button type="button" class="modal__button modal__button--close" aria-label="Закрыть" tabindex="6"></button>
-        <h1>Закажите звонок</h1>
-        <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
-        <div class="modal__wrapper">
-          <div class="modal__row modal__row--name">
-            <label class="visually-hidden" for="modal-name">Имя</label>
-            <input id="modal-name" type="text" name="modal-name" placeholder="Имя" tabindex="1" required>
+  <section class="modal-login visually-hidden">
+    <div class="modal-login__overlay"></div>
+    <form class="modal-login__form" action="https://echo.htmlacademy.ru/" method="POST">
+      <div class="modal-login__container">
+        <button type="button" class="modal-login__button modal-login__button--close" aria-label="Close"
+          tabindex="6"></button>
+        <h1>Log In</h1>
+        <div class="modal-login__wrapper">
+          <div class="modal-login__row modal-login__row--email">
+            <label class="visually-hidden" for="modal-login-email"></label>
+            <input id="modal-login-email" type="email" name="modal-login-email" placeholder="Your E-mail" tabindex="1"
+              required>
           </div>
-          <div class="modal__row modal__row--tel">
-            <label class="visually-hidden" for="modal-tel">Телефон</label>
-            <input id="modal-tel" type="tel" name="modal-tel" placeholder="Телефон" tabindex="2" required>
+          <div class="modal-login__row modal-login__row--password">
+            <label class="visually-hidden" for="modal-login-password"></label>
+            <input id="modal-login-password" type="password" name="modal-login-password" placeholder="Password"
+              tabindex="2" required>
           </div>
-          <div class="modal__row modal__row--question">
-            <label class="visually-hidden" for="modal-question">Ваш вопрос</label>
-            <input id="modal-question" type="text" name="modal-question" placeholder="Ваш вопрос" tabindex="3">
-          </div>
+          <a class="modal-login__forgot" href="#" aria-label="Forgot your password?" tabindex="3">Forgot your
+            password?</a>
         </div>
-        <button type="submit" class="modal__button modal__button--submit button"
-          aria-label="Отправить" tabindex="4">Отправить</button>
-        <div class="modal__checkbox">
-          <input class="visually-hidden" id="modal-consent" type="checkbox" name="modal-consent"
-            value="Согласие на обработку персональных данных" tabindex="5" checked required>
-          <label for="modal-consent">Я согласен на обработку персональных данных</label>
+        <button type="submit" class="modal-login__button modal-login__button--submit button" aria-label="Log In"
+          tabindex="4">Log In</button>
+        <div class="modal-login__noaccount">
+          <p>Don’t have an account?</p>
+          <a class="modal-login__signin" href="#" aria-label="Sign up" tabindex="4">Sign up</a>
         </div>
       </div>
     </form>
-  </section> -->
+  </section>
 
   <script src="./js/vendor.js"></script>
   <script src="./js/main.js"></script>
