--- a/source/card.html
+++ b/source/card.html
@@ -98,8 +98,7 @@
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
                   srcset="./img/product-1-tablet.webp, ./img/product-1-tablet-2x.webp 2x">
-                <source type="image/webp"
-                  srcset="./img/product-1-desktop.webp, ./img/product-1-desktop-2x.webp 2x">
+                <source type="image/webp" srcset="./img/product-1-desktop.webp, ./img/product-1-desktop-2x.webp 2x">
                 <!-- 1x: 100px; 2x: 200px -->
                 <img width="100" height="125" src="./img/product-1-desktop.jpg"
                   srcset="./img/product-1-desktop-2x.jpg 2x" alt="Product photo">
@@ -109,8 +108,7 @@
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
                   srcset="./img/product-2-tablet.webp, ./img/product-2-tablet-2x.webp 2x">
-                <source type="image/webp"
-                  srcset="./img/product-2-desktop.webp, ./img/product-2-desktop-2x.webp 2x">
+                <source type="image/webp" srcset="./img/product-2-desktop.webp, ./img/product-2-desktop-2x.webp 2x">
                 <!-- 1x: 100px; 2x: 200px -->
                 <img width="100" height="125" src="./img/product-2-desktop.jpg"
                   srcset="./img/product-2-desktop-2x.jpg 2x" alt="Product photo">
@@ -120,8 +118,7 @@
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
                   srcset="./img/product-3-tablet.webp, ./img/product-3-tablet-2x.webp 2x">
-                <source type="image/webp"
-                  srcset="./img/product-3-desktop.webp, ./img/product-3-desktop-2x.webp 2x">
+                <source type="image/webp" srcset="./img/product-3-desktop.webp, ./img/product-3-desktop-2x.webp 2x">
                 <!-- 1x: 100px; 2x: 200px -->
                 <img width="100" height="125" src="./img/product-3-desktop.jpg"
                   srcset="./img/product-3-desktop-2x.jpg 2x" alt="Product photo">
@@ -328,38 +325,50 @@
     </div>
   </footer>
 
-  <!-- Модальное окно Login-->
-  <!-- <section class="modal visually-hidden">
-    <div class="modal__overlay"></div>
-    <form class="modal__form" action="https://echo.htmlacademy.ru/" method="POST">
-      <div class="modal__container">
-        <button type="button" class="modal__button modal__button--close" aria-label="Закрыть" tabindex="6"></button>
-        <h1>Закажите звонок</h1>
-        <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
-        <div class="modal__wrapper">
-          <div class="modal__row modal__row--name">
-            <label class="visually-hidden" for="modal-name">Имя</label>
-            <input id="modal-name" type="text" name="modal-name" placeholder="Имя" tabindex="1" required>
+  <!-- Модальное окно Card-->
+  <section class="modal-card visually-hidden">
+    <div class="modal-card__overlay"></div>
+    <form class="modal-card__form" action="https://echo.htmlacademy.ru/" method="POST">
+      <div class="modal-card__container">
+        <button type="button" class="modal-card__button modal-card__button--close" aria-label="Close"
+          tabindex="5"></button>
+        <h1>The item was added to your cart</h1>
+        <div class="modal-card__wrapper">
+          <picture>
+            <source type="image/webp" media="(max-width: 767px)"
+              srcset="./img/product-popup-mobile.webp, ./img/product-popup-mobile-2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1023px)"
+              srcset="./img/product-popup-tablet.webp, ./img/product-popup-tablet-2x.webp 2x">
+            <source type="image/webp" srcset="./img/product-popup-desktop.webp, ./img/product-popup-desktop-2x.webp 2x">
+            <!-- 1x: 84px; 2x: 168px -->
+            <img width="84" height="79" src="./img/product-popup-desktop-2x.jpg"
+              srcset="./img/product-popup-desktop-2x.jpg 2x" alt="Gold Necklace">
+          </picture>
+          <div class="modal-card__info">
+            <h2>Gold Necklace</h2>
+            <p>&dollar; 115</p>
           </div>
-          <div class="modal__row modal__row--tel">
-            <label class="visually-hidden" for="modal-tel">Телефон</label>
-            <input id="modal-tel" type="tel" name="modal-tel" placeholder="Телефон" tabindex="2" required>
-          </div>
-          <div class="modal__row modal__row--question">
-            <label class="visually-hidden" for="modal-question">Ваш вопрос</label>
-            <input id="modal-question" type="text" name="modal-question" placeholder="Ваш вопрос" tabindex="3">
+          <div class="modal-card__counter">
+            <button class="modal-card__count modal-card__count--minus button" aria-label="Minus" tabindex="1"></button>
+            <input type="text" class="quantity" value="1">
+            <button class="modal-card__count modal-card__count--plus button" aria-label="Plus" tabindex="2"></button>
           </div>
         </div>
-        <button type="submit" class="modal__button modal__button--submit button"
-          aria-label="Отправить" tabindex="4">Отправить</button>
-        <div class="modal__checkbox">
-          <input class="visually-hidden" id="modal-consent" type="checkbox" name="modal-consent"
-            value="Согласие на обработку персональных данных" tabindex="5" checked required>
-          <label for="modal-consent">Я согласен на обработку персональных данных</label>
+        <div class="modal-card__footer">
+          <div class="modal-card__sum">
+            <p>You have 1 item in the cart</p>
+            <p>Cart subtotal: &dollar;115</p>
+          </div>
+          <div class="modal-card__buttons">
+            <button type="submit" class="modal-card__button modal-card__button--continue button"
+              aria-label="Continue shopping" tabindex="3">Continue shopping</button>
+            <button type="submit" class="modal-card__button modal-card__button--checkout button" aria-label="Checkout"
+              tabindex="4">Checkout</button>
+          </div>
         </div>
       </div>
     </form>
-  </section> -->
+  </section>
 
   <script src="./js/vendor.js"></script>
   <script src="./js/main.js"></script>
