Добавила библиотеку аккордеона

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -91,7 +91,7 @@
           <h2 class="visually-hidden">Product filter</h2>
           <button class="filter__button filter__button--open button" type="button">Filter</button>
           <form class="filter__form" action="https://echo.htmlacademy.ru/" method="POST">
-            <div class="filter__container">
+            <div class="filter__container" id="my-accordion">
               <fieldset class="filter__wrapper fielset">
                 <legend class="filter__name">Product</legend>
                 <ul class="filter__list list">
@@ -113,7 +113,7 @@
                     <label for="filter-earrings">Earrings</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button close-button--nojs" id="accordion-button" type="button">
+                <button class="filter__accordion close-button close-button--nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -129,7 +129,7 @@
                     <label for="filter-silver">Silver</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button close-button--nojs" id="accordion-button" type="button">
+                <button class="filter__accordion close-button close-button--nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -146,7 +146,7 @@
                     <label for="filter-dreams">Dreams</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button close-button--nojs" id="accordion-button" type="button">
+                <button class="filter__accordion close-button close-button--nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -165,7 +165,7 @@
                     <span class="range__control range__control--max-price">&dollar; 155</span>
                   </div>
                 </div>
-                <button class="filter__accordion close-button close-button--nojs" id="accordion-button" type="button">
+                <button class="filter__accordion close-button close-button--nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
