--- a/source/index.html
+++ b/source/index.html
@@ -603,11 +603,11 @@
   </footer>
 
   <!-- Модальное окно Login-->
-  <section class="modal-login visually-hidden">
-    <div class="modal-login__overlay"></div>
+  <section class="modal modal-login visually-hidden">
+    <div class="modal-login__overlay overlay"></div>
     <form class="modal-login__form" action="https://echo.htmlacademy.ru/" method="POST">
       <div class="modal-login__container">
-        <button type="button" class="modal-login__button modal-login__button--close" aria-label="Close"
+        <button type="button" class="modal-close modal-login__button modal-login__button--close" aria-label="Close"
           tabindex="6"></button>
         <h1>Log In</h1>
         <div class="modal-login__wrapper">
