--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
   <div class="page__wrapper">
     <header class="page__header page__opened page__nojs">
       <div class="page__nav container">
-        <a class="page__logo" href="#">
+        <a class="page__logo">
           <svg width="66" height="66">
             <use xlink:href="img/sprite.svg#icon-logo"></use>
           </svg>
@@ -63,13 +63,13 @@
           </ul>
           <ul class="main-nav-info info-list list">
             <li class="info-list__item">
-              <a class="info-list__link" href="">About CH</a>
+              <a class="info-list__link" href="#">About CH</a>
             </li>
             <li class="info-list__item">
-              <a class="info-list__link" href="">Stores & Hours</a>
+              <a class="info-list__link" href="#">Stores & Hours</a>
             </li>
             <li class="info-list__item">
-              <a class="info-list__link" href="">Contact Us</a>
+              <a class="info-list__link" href="#">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -363,10 +363,10 @@
           <ul class="questions__list list" id="my-accordion">
             <li class="questions__item close-area">
               <div class="questions__wrapper">
+                <h3>What materials are the jewellery made of?</h3>
                 <button class="questions__button close-button close-button--nojs" type="button">
                   <span class="visually-hidden">Open question</span>
                 </button>
-                <h3>What materials are the jewellery made of?</h3>
               </div>
               <p>Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
                 semiprecious stones and crystals.</p>
@@ -605,7 +605,7 @@
   <!-- Модальное окно Login-->
   <section class="modal modal-login visually-hidden">
     <div class="modal-login__overlay overlay"></div>
-    <form class="modal-login__form" action="https://echo.htmlacademy.ru/" method="POST">
+    <form class="modal-login__form" id="login-form" action="https://echo.htmlacademy.ru/" method="POST">
       <div class="modal-login__container">
         <button type="button" class="modal-close modal-login__button modal-login__button--close" aria-label="Close"
           tabindex="6"></button>
