Начала проверку по ПП

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
 
 <body class="page">
   <div class="page__wrapper">
-    <header class="page__header page__opened page__nojs">
+    <header class="page__header page__closed page__nojs">
       <div class="page__nav container">
         <a class="page__logo">
           <svg width="66" height="66">
@@ -93,7 +93,7 @@
           <button class="slider__button slider__button--next button" type="button" aria-label="Next"></button>
         </div>
         <a href="./catalog.html">Shop Now</a>
-        <ul class="slider__list list">
+        <ul class="slider__list slider__list--nojs list">
           <li class="slider__item">
             <a class="slider__link" href="./card.html">
               <picture>
@@ -461,7 +461,7 @@
               </picture>
             </a>
           </li>
-          <li class="inst__item">
+          <li class="inst__item inst__item--small">
             <a class="inst__link" href="#">
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
@@ -475,7 +475,7 @@
               </picture>
             </a>
           </li>
-          <li class="inst__item">
+          <li class="inst__item inst__item--small">
             <a class="inst__link" href="#">
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
@@ -489,7 +489,7 @@
               </picture>
             </a>
           </li>
-          <li class="inst__item">
+          <li class="inst__item inst__item--small">
             <a class="inst__link" href="#">
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
