Поправила все страницы проекта по ПП

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -90,7 +90,7 @@
         <div class="filter">
           <h2 class="visually-hidden">Product filter</h2>
           <button class="filter__button filter__button--open button" type="button" aria-label="Open filter">Filter</button>
-          <form class="filter__form filter__form--closed" action="https://echo.htmlacademy.ru/" method="POST">
+          <form class="filter__form filter__form--nojs" action="https://echo.htmlacademy.ru/" method="POST">
             <button class="filter__close" type="button" aria-label="Close filter"></button>
             <div class="filter__container" id="my-accordion">
               <fieldset class="filter__wrapper fielset">
