--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
 
 <body class="page">
   <div class="page__wrapper">
-    <header class="page__header page__closed page__nojs">
+    <header class="page__header page__opened page__nojs">
       <div class="page__nav container">
         <a class="page__logo">
           <svg width="66" height="66">
