Поправила ПП и адаптивность

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -114,7 +114,7 @@
                     <label for="filter-earrings">Earrings</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button close-button--nojs" type="button">
+                <button class="filter__accordion close-button nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -130,7 +130,7 @@
                     <label for="filter-silver">Silver</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button close-button--nojs" type="button">
+                <button class="filter__accordion close-button nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -147,7 +147,7 @@
                     <label for="filter-dreams">Dreams</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button close-button--nojs" type="button">
+                <button class="filter__accordion close-button nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -166,7 +166,7 @@
                     <span class="range__control range__control--max-price">&dollar; 155</span>
                   </div>
                 </div>
-                <button class="filter__accordion close-button close-button--nojs" type="button">
+                <button class="filter__accordion close-button nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
