--- a/source/index.html
+++ b/source/index.html
@@ -89,8 +89,8 @@
       <section class="slider container">
         <h2>New In</h2>
         <div class="slider__buttons">
-          <button class="slider__button slider__button--previous button" type="button" aria-label="Previous"></button>
-          <button class="slider__button slider__button--next button" type="button" aria-label="Next"></button>
+          <button class="slider__button slider__button--previous nojs button" type="button" aria-label="Previous"></button>
+          <button class="slider__button slider__button--next nojs button" type="button" aria-label="Next"></button>
         </div>
         <a href="./catalog.html">Shop Now</a>
         <ul class="slider__list slider__list--nojs list">
@@ -364,7 +364,7 @@
             <li class="questions__item close-area">
               <div class="questions__wrapper">
                 <h3>What materials are the jewellery made of?</h3>
-                <button class="questions__button close-button close-button--nojs" type="button">
+                <button class="questions__button close-button nojs" type="button">
                   <span class="visually-hidden">Open question</span>
                 </button>
               </div>
@@ -373,7 +373,7 @@
             </li>
             <li class="questions__item close-area">
               <div class="questions__wrapper">
-                <button class="questions__button close-button close-button--nojs" type="button">
+                <button class="questions__button close-button nojs" type="button">
                   <span class="visually-hidden">Open question</span>
                 </button>
                 <h3>Which countries do you deliver to?</h3>
@@ -383,7 +383,7 @@
             </li>
             <li class="questions__item close-area">
               <div class="questions__wrapper">
-                <button class="questions__button close-button close-button--nojs" type="button">
+                <button class="questions__button close-button nojs" type="button">
                   <span class="visually-hidden">Open question</span>
                 </button>
                 <h3>What are the payment methods?</h3>
@@ -393,7 +393,7 @@
             </li>
             <li class="questions__item close-area">
               <div class="questions__wrapper">
-                <button class="questions__button close-button close-button--nojs" type="button">
+                <button class="questions__button close-button nojs" type="button">
                   <span class="visually-hidden">Open question</span>
                 </button>
                 <h3>Can I return the jewellery if it didn’t fit me?</h3>
