--- a/source/index.html
+++ b/source/index.html
@@ -634,8 +634,8 @@
     </form>
   </section>
 
-  <script src="./js/vendor.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./js/vendor.js" type="text/javascript"></script>
+  <script src="./js/main.js" type="text/javascript"></script>
 
 </body>
 
