Поправила замечания тестировщика

--- a/source/card.html
+++ b/source/card.html
@@ -82,8 +82,7 @@
       <h1 class="visually-hidden">Product card</h1>
       <section class="card container">
         <div class="card__gallery">
-          <ul class="card__carousel img-carousel list">
-            <li class="img-carousel__item active">
+          <div class="card__main">
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="./img/product-active-mobile.webp, ./img/product-active-mobile-2x.webp 2x">
@@ -95,7 +94,8 @@
                 <img width="470" height="435" src="./img/product-active-desktop.jpg"
                   srcset="./img/product-active-desktop-2x.jpg 2x" alt="Product photo">
               </picture>
-            </li>
+          </div>
+          <ul class="card__carousel img-carousel list">
             <li class="img-carousel__item">
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
