--- a/source/catalog.html
+++ b/source/catalog.html
@@ -95,7 +95,7 @@
             aria-label="Open filter">Filter</button>
           <form class="filter__form filter__form--nojs" action="https://echo.htmlacademy.ru/" method="POST">
             <button class="filter__close" type="button" aria-label="Close filter"></button>
-            <div class="filter__container" id="my-accordion">
+            <div class="filter__container" id="filter-accordion">
               <fieldset class="filter__wrapper fielset">
                 <legend class="filter__name">Product</legend>
                 <ul class="filter__list list">
@@ -116,7 +116,7 @@
                     <label for="filter-earrings">Earrings</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button nojs" type="button">
+                <button class="filter__accordion close-button acc_head nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -132,7 +132,7 @@
                     <label for="filter-silver">Silver</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button nojs" type="button">
+                <button class="filter__accordion close-button acc_head nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -149,7 +149,7 @@
                     <label for="filter-dreams">Dreams</label>
                   </li>
                 </ul>
-                <button class="filter__accordion close-button nojs" type="button">
+                <button class="filter__accordion close-button acc_head nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
@@ -168,7 +168,7 @@
                     <span class="range__control range__control--max-price">&dollar; 155</span>
                   </div>
                 </div>
-                <button class="filter__accordion close-button nojs" type="button">
+                <button class="filter__accordion close-button acc_head nojs" type="button">
                   <span class="visually-hidden">Open filter</span>
                 </button>
               </fieldset>
